<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello, you are using Google Spreadsheets Tasklist!</string>
    <string name="app_name">GSTasklist</string>
    <string name="current_source">Current tasklist source</string>
    <string name="set_source">Set source</string>
    <string name="enter_credentials">Enter credentials</string>
    <string name="tasklist_data_types">Tasklist data types</string>
    <string name="open_tasklist">Open tasklist</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_set_spreadsheet">SetSpreadsheet</string>
    <string name="noSourceSelected">No source spreadsheet selected</string>
    <string name="ready_section">ready</string>
    <string name="in_progress_section">in progress</string>
    <string name="scheduled_section">scheduled</string>
    <string name="title_activity_tasklist">Tasklist</string>
    <string name="done_section">done</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="column_deadline">Deadline</string>
    <string name="column_status">Status</string>
    <string name="column_comments">Comments</string>
    <string name="column_task">Task</string>
    <string name="define_columns">Define columns</string>
    <string name="define_tags">Define tags</string>
    <string name="title_activity_define_columns">Define columns</string>
    <string name="title_activity_define_tags">Define tags</string>
    <string name="new_tag">New tag</string>
    <string name="addTaskMenu">Add task</string>
    <string name="refreshTasklistMenu">Reload tasklist</string>

    <string-array name="colors">
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>black</item>
        <item>white</item>
        <item>gray</item>
        <item>cyan</item>
        <item>magenta</item>
        <item>yellow</item>
        <item>lightgray</item>
        <item>darkgray</item>
    </string-array>

    <string name="title_activity_add_task">Add task</string>
    <string name="save">Save</string>
    <string name="menu_commit">Upload changes</string>
    <string name="menu_how_to">How to use this app?</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_view_task">View Task</string>
    <string name="title_activity_how_to">How to...</string>

</resources>