<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_source"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10pt"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/currentSourceSpreadsheetNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noSourceSelected"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/currentSourceWorkbookNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/enterCredentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="enterCredentials"
            android:text="@string/enter_credentials"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/selectSourceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectSourceSpreadsheet"
            android:text="@string/set_source"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/defineColumnsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="defineColumns"
            android:text="@string/define_columns"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/defineTagsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="defineTags"
            android:text="@string/define_tags"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/setStartRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="setTasklistStartingRow"
            android:text="Set time range"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>